--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -1749,12 +1749,16 @@ presetScripts:
 
       def add_source_dest_columns(df):
           df.pod = df.ctx['pod']
+          df.node = df.ctx['node']
+          df.deployment = df.ctx['deployment']
           df.namespace = df.ctx['namespace']
 
           # If remote_addr is a pod, get its name. If not, use IP address.
           df.ra_pod = px.pod_id_to_pod_name(px.ip_to_pod_id(df.remote_addr))
           df.is_ra_pod = df.ra_pod != ''
           df.ra_name = px.select(df.is_ra_pod, df.ra_pod, df.remote_addr)
+          df.ra_node = px.pod_id_to_node_name(px.ip_to_pod_id(df.remote_addr))
+          df.ra_deployment = px.pod_id_to_deployment_name(px.ip_to_pod_id(df.remote_addr))
 
           df.is_server_tracing = df.trace_role == 2
           df.is_source_pod_type = px.select(df.is_server_tracing, df.is_ra_pod, True)
@@ -1763,17 +1767,23 @@ presetScripts:
           # Set client and server based on trace_role.
           df.source_pod = px.select(df.is_server_tracing, df.ra_name, df.pod)
           df.destination_pod = px.select(df.is_server_tracing, df.pod, df.ra_name)
+          df.destination_node = px.select(df.is_server_tracing, df.node, df.ra_node)
+          df.destination_deployment = px.select(df.is_server_tracing, df.deployment, df.ra_deployment)
 
           df = df.drop(['ra_pod', 'is_ra_pod', 'ra_name', 'is_server_tracing'])
           df.source_service = px.pod_name_to_service_name(df.source_pod)
           df.destination_service = px.pod_name_to_service_name(df.destination_pod)
           df.destination_namespace = px.pod_name_to_namespace(df.destination_pod)
           df.source_namespace = px.pod_name_to_namespace(df.source_pod)
+          df.source_node = px.pod_id_to_node_name(px.pod_name_to_pod_id(df.source_pod))
+          df.source_deployment = px.pod_name_to_deployment_name(df.source_pod)
 
+          df.source_deployment = remove_ns_prefix(df.source_deployment)
           df.source_service = remove_ns_prefix(df.source_service)
           df.destination_service = remove_ns_prefix(df.destination_service)
           df.source_pod = remove_ns_prefix(df.source_pod)
           df.destination_pod = remove_ns_prefix(df.destination_pod)
+          df.destination_deployment = remove_ns_prefix(df.destination_deployment)
 
           # If the destination service is missing then try the nslookup
           df.destination_service = px.select(
@@ -1818,9 +1828,13 @@ presetScripts:
           resource={
             'service.name': df.source_service,
             'service.instance.id': df.source_pod,
+            'k8s.deployment.name': df.source_deployment,
             'k8s.namespace.name': df.source_namespace,
+            'k8s.node.name': df.source_node,
             'amqp.service.name': df.destination_service,
             'amqp.pod.name': df.destination_pod,
+            'amqp.node.name': df.destination_node,
+            'amqp.deployment.name': df.destination_deployment,
             'amqp.namespace.name': df.destination_namespace,
             'amqp.frame_name': df.frame_name,
             'amqp.req_name': df.req_name,
@@ -1858,12 +1872,16 @@ presetScripts:
 
       def add_source_dest_columns(df):
           df.pod = df.ctx['pod']
+          df.node = df.ctx['node']
+          df.deployment = df.ctx['deployment']
           df.namespace = df.ctx['namespace']
 
           # If remote_addr is a pod, get its name. If not, use IP address.
           df.ra_pod = px.pod_id_to_pod_name(px.ip_to_pod_id(df.remote_addr))
           df.is_ra_pod = df.ra_pod != ''
           df.ra_name = px.select(df.is_ra_pod, df.ra_pod, df.remote_addr)
+          df.ra_node = px.pod_id_to_node_name(px.ip_to_pod_id(df.remote_addr))
+          df.ra_deployment = px.pod_id_to_deployment_name(px.ip_to_pod_id(df.remote_addr))
 
           df.is_server_tracing = df.trace_role == 2
           df.is_source_pod_type = px.select(df.is_server_tracing, df.is_ra_pod, True)
@@ -1872,17 +1890,23 @@ presetScripts:
           # Set client and server based on trace_role.
           df.source_pod = px.select(df.is_server_tracing, df.ra_name, df.pod)
           df.destination_pod = px.select(df.is_server_tracing, df.pod, df.ra_name)
+          df.destination_node = px.select(df.is_server_tracing, df.node, df.ra_node)
+          df.destination_deployment = px.select(df.is_server_tracing, df.deployment, df.ra_deployment)
 
           df = df.drop(['ra_pod', 'is_ra_pod', 'ra_name', 'is_server_tracing'])
           df.source_service = px.pod_name_to_service_name(df.source_pod)
           df.destination_service = px.pod_name_to_service_name(df.destination_pod)
           df.destination_namespace = px.pod_name_to_namespace(df.destination_pod)
           df.source_namespace = px.pod_name_to_namespace(df.source_pod)
+          df.source_node = px.pod_id_to_node_name(px.pod_name_to_pod_id(df.source_pod))
+          df.source_deployment = px.pod_name_to_deployment_name(df.source_pod)
 
+          df.source_deployment = remove_ns_prefix(df.source_deployment)
           df.source_service = remove_ns_prefix(df.source_service)
           df.destination_service = remove_ns_prefix(df.destination_service)
           df.source_pod = remove_ns_prefix(df.source_pod)
           df.destination_pod = remove_ns_prefix(df.destination_pod)
+          df.destination_deployment = remove_ns_prefix(df.destination_deployment)
 
           # If the destination service is missing then try the nslookup
           df.destination_service = px.select(
@@ -1914,8 +1938,9 @@ presetScripts:
       df.consumer_tag = px.pluck(df.resp_msg, "consumer_tag")
       df.routing_key = px.select(df.req_routing_key != '', df.req_routing_key, df.resp_routing_key)
 
-      df = df.groupby(['source_pod', 'source_service', 'source_namespace', 'destination_pod', 'destination_service',
-                      'destination_namespace',  'frame_name', 'req_name', 'resp_name', 'routing_key', 'consumer_tag']).agg(
+      df = df.groupby(['source_pod', 'source_service', 'source_namespace', 'source_node', 'source_deployment', 'destination_pod', 'destination_node',
+                      'destination_deployment', 'destination_service', 'destination_namespace',  'frame_name', 'req_name',
+                      'resp_name', 'routing_key', 'consumer_tag']).agg(
           req_bytes=('req_bytes', px.sum),
           resp_bytes=('resp_bytes', px.sum),
           count=('upid', px.count),
@@ -1931,9 +1956,13 @@ presetScripts:
           resource={
             'service.name': df.source_service,
             'service.instance.id': df.source_pod,
+            'k8s.deployment.name': df.source_deployment,
             'k8s.namespace.name': df.source_namespace,
+            'k8s.node.name': df.source_node,
             'amqp.service.name': df.destination_service,
             'amqp.pod.name': df.destination_pod,
+            'amqp.node.name': df.destination_node,
+            'amqp.deployment.name': df.destination_deployment,
             'amqp.namespace.name': df.destination_namespace,
             'amqp.frame_name': df.frame_name,
             'amqp.req_name': df.req_name,
