add req/resp headers to HTTP spans
Signed-off-by: Michelle Nguyen <michellenguyen@pixielabs.ai>

--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -198,6 +198,8 @@ presetScripts:
                 'http.host': df.host,
                 'http.status_code': df.resp_status,
                 'http.user_agent': df.user_agent,
+                'http.req_headers': df.req_headers,
+                'http.resp_headers': df.resp_headers,
               },
             ),
           ],
